# nav_dif

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: nav_dif.launch
nodes/: nav_dif
src/nav_dif/: control_difuso_v1.py  fuzzy.py  nav_dif.py
